- Fixed the horizontal scrollbar that appeared at all times due to the category menu border.
git-svn-id: https://pligg.svn.beanstalkapp.com/svnroot/trunk@794 68377534-e894-4f14-aad3-e92cf46e58fa

--- a/templates/bootstrap/css/style.css
+++ b/templates/bootstrap/css/style.css
@@ -103,8 +103,8 @@ filter:alpha(opacity=40);
     background-color: #EEEEEE;
     background-image: -moz-linear-gradient(center top , #F5F5F5 0%, #EEEEEE 100%);
     background-repeat: repeat-x;
-    border: 1px solid #E5E5E5;
-    border-radius: 4px 4px 4px 4px;
+    border: solid #E5E5E5;
+	border-width: 1px 0;
     height: 36px;
     width: 100%;
 }
